// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitySelector should exclude location if location does not exist 1`] = `Array []`;

exports[`CitySelector should exclude location if location is not live 1`] = `Array []`;

exports[`CitySelector should filter for all non-live cities if filterText is "wirschaffendas" 1`] = `
Array [
  CityModel {
    "_aliases": undefined,
    "_code": "nonlive",
    "_eventsEnabled": false,
    "_extrasEnabled": false,
    "_latitude": undefined,
    "_live": false,
    "_longitude": undefined,
    "_name": "Notlive",
    "_prefix": undefined,
    "_pushNotificationsEnabled": undefined,
    "_sortingName": "Nonlive",
    "_tunewsEnabled": undefined,
  },
]
`;

exports[`CitySelector should filter for existing and live cities 1`] = `
Array [
  CityModel {
    "_aliases": undefined,
    "_code": "city",
    "_eventsEnabled": false,
    "_extrasEnabled": false,
    "_latitude": undefined,
    "_live": true,
    "_longitude": undefined,
    "_name": "City",
    "_prefix": undefined,
    "_pushNotificationsEnabled": undefined,
    "_sortingName": "City",
    "_tunewsEnabled": undefined,
  },
  CityModel {
    "_aliases": undefined,
    "_code": "otherCity",
    "_eventsEnabled": false,
    "_extrasEnabled": false,
    "_latitude": undefined,
    "_live": true,
    "_longitude": undefined,
    "_name": "Other city",
    "_prefix": undefined,
    "_pushNotificationsEnabled": undefined,
    "_sortingName": "OtherCity",
    "_tunewsEnabled": undefined,
  },
  CityModel {
    "_aliases": undefined,
    "_code": "yetanothercity",
    "_eventsEnabled": false,
    "_extrasEnabled": false,
    "_latitude": undefined,
    "_live": true,
    "_longitude": undefined,
    "_name": "Yet another city",
    "_prefix": undefined,
    "_pushNotificationsEnabled": undefined,
    "_sortingName": "Yetanothercity",
    "_tunewsEnabled": undefined,
  },
]
`;
